adds basic structure to workflow page

--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -88,7 +88,7 @@ section {
 
 /* long-term maybe panel can be removed */
 #panel {
-  border: solid black 2px;
+  /* border: solid black 2px; */
   margin: 32px 16px;
   padding: 16px;
   display: flex;
@@ -103,35 +103,37 @@ footer {
 }
 
 /* Workflow styles */
-.workflow-container__primary {
+.workflow-container {
   border: solid gray 1px;
   margin: 16px 0;
-  padding: 0 16px;
 }
 
-.workflow-container__secondary {
-  /* background-color: lightpink; */
+.workflow-container h2,
+.workflow-container p {
+  padding: 0 16px;
 }
 
 .workflow-container__header {
   display: flex;
   justify-content: space-between;
+  background-color: #f4f4f4;
 }
 
 .workflow-container__button {
   background: transparent;
   border: none;
-
   text-transform: capitalize;
+  color: #ff4500;
 }
 
 .workflow-container__button:hover {
   background-color: transparent;
   border: none;
   border-radius: 0;
+  text-decoration: underline;
 }
 
-.workflow-container__button-link {
+/* .workflow-container__button-link {
   border-bottom: solid transparent 2px;
   padding-bottom: 2px;
   color: #ff4500;
@@ -140,7 +142,7 @@ footer {
 .workflow-container__button-link:hover {
   border-bottom: solid #ff4500 2px;
   padding-bottom: 2px;
-}
+} */
 
 /* DeviceList styles */
 
