adds styling for nav to show .active

--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -144,6 +144,10 @@ footer {
   align-items: baseline;
 }
 
+.active {
+  color: #ff4500;
+  text-decoration: underline;
+}
 
 /* DeviceList styles */
 
