Make device list expand to show more details information about devices when clicking the row. Add some icons to show possible actions.

--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -146,25 +146,6 @@ footer {
   text-decoration: underline;
 }
 
-/* DeviceList styles */
-
-#request {
-  padding: 16px 0;
-}
-
-#response {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  padding: 16px 0;
-}
-
-#data {
-  height: 100%;
-  margin: 16px 0;
-  background: lightgray;
-}
-
 table,
 thead,
 tbody {
@@ -185,7 +166,7 @@ thead {
 }
 
 tbody {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
 }
 
@@ -194,4 +175,33 @@ td {
   display: flex;
   flex: 1;
   padding: 16px;
+}
+
+/* DeviceList styles */
+
+#search {
+  padding: 16px 0;
+}
+
+#device_list {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 16px 0;
+}
+
+#data {
+  height: 100%;
+  margin: 16px 0;
+  background: lightgray;
+}
+
+#data .device_details {
+  background: white;
+  width: 100%;
+  table-layout: fixed;
+}
+
+#data .device_details td {
+  padding: 4px;
 }
