--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -196,12 +196,15 @@ td {
   background: lightgray;
 }
 
-#data .device_details {
+#data .device_details_row {
   background: white;
+}
+
+#data .device_details_table {
   width: 100%;
   table-layout: fixed;
 }
 
-#data .device_details td {
+#data .device_details_table td {
   padding: 4px;
 }
