Start working on device init form

--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -200,6 +200,11 @@ td {
   background: white;
 }
 
+#data .device_details_row td {
+  display: flex;
+  flex-direction: column;
+}
+
 #data .device_details_table {
   width: 100%;
   table-layout: fixed;
