--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -51,11 +51,19 @@ h2 {
   line-height: 1.2;
 }
 
+h2:first-child {
+  margin-top: 32px;
+}
+
 p {
   font-size: 16px;
   margin: 16px 0;
   line-height: 1.2;
   font-weight: 400;
+}
+
+p:first-child {
+  margin-top: 16px;
 }
 
 button {
