--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -111,6 +111,7 @@ footer {
 .workflow-container {
   border: solid gray 1px;
   margin: 16px 0;
+  padding-bottom: 16px;
 }
 
 .workflow-container h2,
@@ -168,7 +169,7 @@ footer {
 }
 
 #data {
-  height: 100%;
+  /* height: 100%; */
   margin: 16px 0;
   background: lightgray;
 }
