adds rendering of diffs in the array and basic styling for error and diff

--- a/react-front/public/styles/main.css
+++ b/react-front/public/styles/main.css
@@ -248,3 +248,17 @@ progress::-moz-progress-bar {
 #data .device_details_table td {
   padding: 4px;
 }
+
+/* error styles */
+
+.error {
+  color: #ff4500;
+}
+
+/* diff box styles */
+
+#diff-box {
+  background-color: lightgray;
+  color: red;
+  margin: 0 16px;
+}
