--- a/public/styles/prism.css
+++ b/public/styles/prism.css
@@ -10,8 +10,6 @@ code[class*="language-"],
 pre[class*="language-"] {
   color: #003049;
   background: none;
-  /* text-shadow: 0 1px white; */
-  /* font-family: 'Andale Mono', 'Ubuntu Mono', monospace; */
   font-family: "Karla", sans-serif;
   font-weight: 400;
   font-size: 1rem;
@@ -21,6 +19,7 @@ pre[class*="language-"] {
   word-break: normal;
   word-wrap: normal;
   line-height: 1.3;
+  text-shadow: none;
 
   -moz-tab-size: 4;
   -o-tab-size: 4;
@@ -64,7 +63,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #f5f2f0;
+  background: none;
 }
 
 /* Inline code */
