--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -208,22 +208,26 @@ td {
 
 progress {
   display: flex;
-  width: calc(100% - 32px);
+  width: 100%;
   border-radius: 10px;
+
+    /* Reset the default appearance */
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  
+  /* Get rid of default border in Firefox. */
+  border: none;
 }
 
 progress::-webkit-progress-bar {
-  border-radius: 3px;
   background-color: #ffe7dd;
 }
 progress::-webkit-progress-value {
-  border-radius: 3px;
   background-color: #ff4500;
 }
-
 progress::-moz-progress-bar {
-  border-radius: 3px;
-  background-color: yellow;
+  background-color: #ff4500;
 }
 
 /* DeviceList styles */
