Add 'start over' button at dryrun step. Show working status of refresh repo. Add more checks to disable dryrun while settings is refreshed. Disable commit liverun if someone else did refresh repo.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -141,6 +141,10 @@ footer {
   background-color: #f4f4f4;
 }
 
+.task-container .heading h2 {
+  margin: 32px 0 32px 0;
+}
+
 .task-container .close {
   background: transparent;
   border: none;
@@ -162,6 +166,10 @@ footer {
 .task-collapsable .info {
   display: flex;
   align-items: baseline;
+}
+
+.ui.checkbox {
+  margin: 16px;
 }
 
 a.active {
