Show commit target as own section, and make it collapsable. Add help info popup for commit target/sync status

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -130,7 +130,6 @@ footer {
 .task-container {
   border: solid gray 1px;
   margin: 16px 0;
-  padding-bottom: 16px;
 }
 
 .task-container h2,
@@ -169,6 +168,10 @@ footer {
 
 .task-collapsable {
   margin-top: 16px;
+}
+
+.task-collapsable .tablecontainer {
+  margin: 16px;
 }
 
 .task-collapsable .info {
