--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -364,6 +364,10 @@ progress::-moz-progress-bar {
   font-size: 80%;
 }
 
+.fullconfig {
+  overflow-x: scroll;
+}
+
 /* log output styles */
 .logoutput {
   overflow-y: scroll;
@@ -377,4 +381,15 @@ progress::-moz-progress-bar {
 
 .job_ticket_ref {
   width: 15em;
+}
+
+/* Workaround for an unfixed bug with Loaders not showing up properly in Modals
+ * https://github.com/Semantic-Org/Semantic-UI-React/issues/3133 
+ */
+.ui.dimmer .ui.modalloader.loader:before {
+  border-color: rgba(0, 0, 0, 0.1);
+}
+
+.ui.dimmer .ui.modalloader.loader:after {
+  border-color: #767676 transparent transparent;
 }
