add link to monitoring/nav if netbox state is active new way of doing tagged/untagged vlans on interface config page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -368,6 +368,11 @@ progress::-moz-progress-bar {
   overflow-x: scroll;
 }
 
+.table-button-compact.button {
+  max-height: min-content;
+  padding: .35em 1em .35em;
+}
+
 /* log output styles */
 .logoutput {
   overflow-y: scroll;
