Added LogViewer component as a unified component for cnaas-front (#185)
* Added LogViewer component as a unified component for cnaas-front

* Remove unused componentdidupdate

* Remove commented out code

* Include propTypes

* Remove unused state variable confirmJobId from DryRunProgressInfo

* jobId can be string or number

---------

Co-authored-by: Jakob Mellberg <jakob.mellberg@oru.se>

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -376,14 +376,8 @@ progress::-moz-progress-bar {
 }
 
 /* log output styles */
-.logoutput {
-  overflow-y: scroll;
-  max-height: 10em;
-  overflow-x: hidden;
-  font-family: monospace;
-  background-color: #ddd;
-  margin: 1em;
-  font-size: 90%;
+.language-log span.keyword {
+  display: inherit;
 }
 
 .job_ticket_ref {
