Use 1rem instead of 1em for diff font-size

--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -14,7 +14,7 @@ pre[class*="language-"] {
   background: 0 0;
   text-shadow: 0 1px #fff;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-  font-size: 1em;
+  font-size: 1rem;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
