--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -379,6 +379,39 @@ progress::-moz-progress-bar {
 }
 
 /* log output styles */
+div.inline-log-viewer {
+  position: relative;
+  max-height: 10em;
+  margin: 1em;
+}
+
+button.button-expand-log-viewer {
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  margin: 0;
+}
+
+.language-log.expand-log-viewer {
+  line-height: normal;
+  height: 100%;
+}
+
+.language-log.text-wrap {
+  line-height: normal;
+  text-wrap: wrap;
+}
+
+.language-log.inline-log-viewer {
+  line-height: normal;
+  min-height: 4em;
+  max-height: 10em;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: unset;
+}
+
 .language-log span.keyword {
   display: inherit;
 }
