Use css variable
Co-authored-by: Johannes Jeppsson <2286858+YotaYota@users.noreply.github.com>

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -389,7 +389,7 @@ progress::-moz-progress-bar {
 .div-inline-log-viewer {
   position: relative;
   max-height: 10rem;
-  margin: 1rem;
+  margin: var(--size-md);
 }
 
 .button-expand-log-viewer {
