Use css variable
Co-authored-by: Johannes Jeppsson <2286858+YotaYota@users.noreply.github.com>

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -394,8 +394,8 @@ progress::-moz-progress-bar {
 
 .button-expand-log-viewer {
   position: absolute;
-  bottom: 0.5rem;
-  right: 0.5rem;
+  bottom: var(--size-xxs);
+  right: var(--size-xxs);
   margin: 0;
 }
 
